# rust-learning

01State/: Cargo.toml
01State/src/: main.rs
01hello_rocket/src/: main.rs
02State Database Connection/: .env  Cargo.toml  Rocket.toml
02State Database Connection/migrations/: 20230122131343_create_users.sql
02State Database Connection/src/: main.rs
02hello_rocket_async/src/: main.rs
Complex Program/: main  main.rs
Complex Program/encryptor/: rot13.rs
Crates/: Cargo.toml
Crates/src/: main.rs
Crates/src/cipher/: mod.rs  rot13.rs  rsa.rs
Hello World/: main  main.rs
Modular/: .gitignore  Cargo.toml  Rocket.toml
Modular/migrations/: 20230124110447_users.sql  20230208132811_create_posts.sql
Modular/src/: lib.rs  main.rs
Modular/src/catchers/: mod.rs
Modular/src/errors/: our_error.rs
Modular/src/fairings/: csrf.rs
Modular/src/guards/: mod.rs
Modular/src/models/: mod.rs  our_date_time.rs  pagination.rs  photo_post.rs  post.rs  text_post.rs  user.rs  user_status.rs  video_post.rs
Modular/src/routes/: mod.rs  post.rs  user.rs
Modular/src/traits/: mod.rs
Modular/src/views/: template.html.tera
Modular/src/views/posts/: index.html.tera  show.html.tera
Modular/src/views/users/: _user.html.tera  form.html.tera  index.html.tera  show.html.tera
rocket-routes/src/: main.rs
