[package]
name = "modular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "modular"
path = "src/main.rs"

[lib]
name = "modular"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["uuid"] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["sqlx_postgres"] }
sqlx = { version = "0.5", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"] }
uuid = { version = "0.8.2", features = ["v4"] }
zxcvbn = "2"
regex = "1.5.4"
ammonia = "3.1.2"
argon2 = { version = "0.3", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }

[profile.dev]
panic = "abort"